<resources>
    <string name="app_name">MazeSurvivor</string>

    <string name="action_settings">Help</string>
    <string name="level_of_game">Enter 1 - 99</string>
    <string name="marathon_mode">Marathon Mode</string>
    <string name="highest_score">Your Highest Score</string>
    <string name="exercise_mode">Exercise Mode</string>
    <string name="title_activity_maze_survivor">MazeSurvivorActivity</string>
    <string name="title_activity_survivor_games_menu">Maze Survivor</string>
    <string name="title_activity_game_introduction">Game Introduction</string>
    <string name="move_rule">1. Move to one direction by one cell each time.</string>
    <string name="game_rule">2. Use less time to hit the higher level, maze will change within random time, be careful with the traps.</string>
    <string name="attack_rule">3. Use fire ball to attack monsters.</string>
    <string name="pause_rule">4. Touch the maze to pause the game.</string>
    <string name="bonus_time_rule">5. Use bonus time sand clock to extend the time to change maze by 5 seconds.</string>
    <string name="marathon_mode_rule">6. Marathon Mode: Start with level 1 and record the higher score.</string>
    <string name="exercise_mode_rule">7. Exercise Mode: Choose any level you want to start with, but will not record the score.</string>
</resources>
